--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                         <!-- <div class="col"><input class="form-control" id="email" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>-->
                         <div class="col-auto ph1 col">
                             <button class="btn btn-primary active  btn-primary-spacing btnf1 " id="submitButton" title="" value="" onClick="actionForm(this.form.id, 'https://forms.gle/adUrkfJLfW1ay4pH7/'); return false;">
-                                <a class="hint--bottom hint--rounded hint--success" aria-label="¡Yo me sumo a juan diego!" href="https://forms.gle/adUrkfJLfW1ay4pH7">Unete al Equipo </a>
+                                <a class="hint--bottom hint--rounded hint--success" aria-label="¡Yo me sumo a juan diego!" href="https://forms.gle/adUrkfJLfW1ay4pH7">Únete al Equipó</a>
                             </button>
                         </div>
                         <div class="col-auto ph2 col">
                             <button class="btn btn-primary active btnf2 " id="show-element" value="" title="" onClick="actionForm(this.form.id, 'https://forms.gle/kcp9JjJnjHvHSeUb6/'); return false;">
                                 <a class="hint--bottom  hint--rounded hint--success" aria-label="¡Juan Diego en mi Comunidad!" href="https://forms.gle/adUrkfJLfW1ay4pH7">
-                                    Te Visitamos
+                                    Agenda Reunión 
                                 </a>
 
                             </button>
@@ -59,7 +59,7 @@
                         <div class="col-auto ph2 col">
                             <button class="btn btn-primary active btnf3 " id="show-element" value="" title="" onClick="actionForm(this.form.id, 'informacion.html'); return false;">
                                 <a class="hint--bottom  hint--rounded hint--success" aria-label="¡Informacion de equipo!" href="informacion.html">
-                                    Informacion
+                                    Acceso Líderes 
                                 </a>
 
                             </button>
